--- a/src/pages/tags/[tag]/[page].astro
+++ b/src/pages/tags/[tag]/[page].astro
@@ -1,8 +1,8 @@
 ---
-import { getCollection } from 'astro:content';
 import type { GetStaticPathsOptions, Page } from 'astro';
+import { getCollection } from 'astro:content';
 import type { CollectionEntry } from 'astro:content';
-import TagPage from '@/pageComponents/tags/[tag]/[page].astro';
+import PostPagingList from '@/features/post/PostPagingList.astro';
 import { extractPostSlug } from '@/utils/extractPostSlug';
 
 type Params = {
@@ -39,4 +39,10 @@ const { page: pageProps } = Astro.props;
 const { tag } = Astro.params as Params;
 ---
 
-<TagPage tag={tag} page={pageProps} />
+<PostPagingList
+  headTitle={`${tag} 記事一覧 - ${pageProps.currentPage}`}
+  pageTitle={`${tag} 記事一覧 - ${pageProps.currentPage}`}
+  postList={pageProps.data}
+  previousUrl={pageProps.url.prev}
+  nextUrl={pageProps.url.next}
+/>
