--- a/src/pages/form.astro
+++ b/src/pages/form.astro
@@ -1,5 +1,11 @@
 ---
-import FormPage from '@/pageComponents/form.astro';
+import PageLayout from '@/layouts/PageLayout.astro';
 ---
 
-<FormPage />
+<PageLayout title="お問い合わせ">
+  <iframe
+    src="https://docs.google.com/forms/d/e/1FAIpQLSelbLcrB0oWhQyA5om5hQqyfG1128J-bDaqV_d6nf6m3kYDNQ/viewform?embedded=true"
+    width="100%"
+    height="1200">読み込んでいます…</iframe
+  >
+</PageLayout>
