--- a/src/pages/policy.astro
+++ b/src/pages/policy.astro
@@ -1,5 +1,11 @@
 ---
-import PolicyPage from '@/pageComponents/policy.astro';
+import { getEntryBySlug } from 'astro:content';
+import PageLayout from '@/layouts/PageLayout.astro';
+
+const page = await getEntryBySlug('pages', 'policy');
+const { Content } = await page.render();
 ---
 
-<PolicyPage />
+<PageLayout title="プライバシーポリシー">
+  <Content />
+</PageLayout>
