--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,21 @@
 ---
-import IndexListPage from '@/pageComponents/index.astro';
+import { getCollection } from 'astro:content';
+import type { CollectionEntry } from 'astro:content';
+import PostPagingList from '@/features/post/PostPagingList.astro';
+import { extractPostSlug } from '@/utils/extractPostSlug';
+import { PAGE_SIZE, RSS_LINKS } from '@/consts';
+
+const posts = (await getCollection('posts'))
+  .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+  .slice(0, PAGE_SIZE)
+  .map((post) => {
+    return { ...post, slug: extractPostSlug(post.slug) };
+  }) as CollectionEntry<'posts'>[];
 ---
 
-<IndexListPage />
+<PostPagingList
+  pageTitle="最新の記事"
+  rss={RSS_LINKS.all}
+  postList={posts}
+  nextUrl="/posts/2"
+/>
