--- a/src/components/OG.astro
+++ b/src/components/OG.astro
@@ -60,7 +60,11 @@ if (ogp[url]) {
 
   if (favicon && favicon.startsWith('//')) {
     favicon = `https://www.google.com/s2/favicons?domain=${origin}`;
-  } else if (favicon && !favicon.startsWith('http')) {
+  } else if (
+    favicon &&
+    !favicon.startsWith('http') &&
+    !favicon.startsWith('data:image')
+  ) {
     favicon = favicon.startsWith('/')
       ? `${origin}${favicon}`
       : `${origin}/${favicon}`;
