--- a/src/components/OG.astro
+++ b/src/components/OG.astro
@@ -47,27 +47,10 @@ if (ogp[url]) {
     $("meta[name='description']").attr('content') ??
     '';
   image = $("meta[property='og:image']").attr('content') ?? '';
-  favicon =
-    $("link[rel='icon']").attr('href') ??
-    $("link[rel='apple-touch-icon']").attr('href') ??
-    $("link[rel='apple-touch-icon-precomposed']").attr('href') ??
-    $("link[rel='shortcut icon']").attr('href') ??
-    `https://www.google.com/s2/favicons?domain=${origin}`;
+  favicon = `https://www.google.com/s2/favicons?sz=${256}&domain=${origin}`;
 
   if (image && !image.startsWith('http')) {
     image = `${origin}${image}`;
-  }
-
-  if (favicon && favicon.startsWith('//')) {
-    favicon = `https://www.google.com/s2/favicons?domain=${origin}`;
-  } else if (
-    favicon &&
-    !favicon.startsWith('http') &&
-    !favicon.startsWith('data:image')
-  ) {
-    favicon = favicon.startsWith('/')
-      ? `${origin}${favicon}`
-      : `${origin}/${favicon}`;
   }
 
   if (import.meta.env.PROD) {
