--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -151,4 +151,13 @@
     margin-top: 20px !important;
     margin-bottom: 20px !important;
   }
+
+  // レスポンシブ対応
+  div.youtube {
+    @apply relative pt-[56.25%] my-5;
+  }
+
+  div.youtube iframe {
+    @apply absolute top-0 right-0 w-[95%] h-full left-0 mx-auto;
+  }
 }
