--- a/src/components/OG.astro
+++ b/src/components/OG.astro
@@ -18,9 +18,12 @@ type OGPJson = Record<
   }
 >;
 
+const found = Astro.request.url.match(/posts\/(\d{4})/);
+if (found === null) throw Error('記事URLから年度が抽出できませんでした');
+const postYear = found[1];
 const { url } = Astro.props;
 const generatedFilePath = new URL(
-  '../../generated/ogp.json',
+  `../../generated/ogp/${postYear}.json`,
   // astro は build 時に自身ではなく dist/entry.mjs に向けてしまいエラーになるので指定する
   import.meta.url
 );
