feat: GA4のスクリプト設定(#23)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import { MarkdownHeading } from 'astro';
 import '@unocss/reset/tailwind.css';
 import 'wicg-inert';
 import BaseHead from '@/components/BaseHead.astro';
+import GA from '@/components/GA.astro';
 import Header from '@/components/Header.astro';
 import SideBar from '@/components/SideBar.astro';
 import Footer from '@/components/Footer.astro';
@@ -58,5 +59,6 @@ const isMarkdownPage = markdownHeadings?.length !== 0;
     <script>
       import '@/scripts/menu';
     </script>
+    {import.meta.env.PROD && <GA />}
   </body>
 </html>
