feat: Google Adsense広告ユニットコンポーネントの配置(#23)

--- a/src/components/Paging.astro
+++ b/src/components/Paging.astro
@@ -7,7 +7,7 @@ type Props = {
 const { previousUrl, nextUrl } = Astro.props;
 ---
 
-<div class="mt-4 flex justify-between">
+<div class="flex justify-between">
   {
     previousUrl ? (
       <a href={previousUrl} class="inline-flex items-center px-2 py-1">
