--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -25,6 +25,7 @@ const { Content, headings } = await post.render();
   description={description}
   noTopHeading={true}
   markdownHeadings={headings}
+  isAdsense={true}
 >
   <article class="post">
     <header>
