--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,11 +12,7 @@ const canonicalURL =
     ? Astro.site?.origin
     : new URL(Astro.url.pathname, Astro.site);
 
-const {
-  title,
-  description = SITE_DESCRIPTION,
-  image = '/placeholder-social.jpg',
-} = Astro.props;
+const { title, description = SITE_DESCRIPTION } = Astro.props;
 
 const titleWithSiteTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 const simpleTitle = title ? title : SITE_TITLE;
@@ -44,14 +40,14 @@ const GOOGLE_SITE_VERIFICATION = import.meta.env.GOOGLE_SITE_VERIFICATION;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={simpleTitle} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:image" content="/ogp.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={simpleTitle} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta property="twitter:image" content="/ogp.png" />
 
 <!-- Google Search Console -->
 <meta name="google-site-verification" content={GOOGLE_SITE_VERIFICATION} />
