update: ESLintのアプデ + lint fix(#68)
eslint: 8.38.0 -> 8.44.0
eslint-plugin-astro: 0.26.1 -> 0.26.2
@typescript-eslint/eslint-plugin: 5.57.1 -> 5.61.0
@typescript-eslint/parser: 5.57.1 -> 5.61.0

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,13 +17,13 @@ const { noTopHeading = false, isMarkdownPage = false } = Astro.props;
       {
         noTopHeading ? (
           <div>
-            <a href="/" class="font-fatface text-2xl">
+            <a href="/" class="text-2xl font-fatface">
               {SITE_TITLE}
             </a>
           </div>
         ) : (
           // 記事ページはこちら
-          <h1 class="font-fatface text-2xl">
+          <h1 class="text-2xl font-fatface">
             <a href="/">{SITE_TITLE}</a>
           </h1>
         )
