--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ const isShowGAdUnit = import.meta.env.PROD && isAdsense;
   </head>
 
   <body
-    class="break-words bg-slate-100 text-left font-sawarabi leading-6 text-slate-800"
+    class="break-words bg-slate-100 text-left leading-6 font-sawarabi text-slate-800"
   >
     <div id="base-contents">
       <Header noTopHeading={noTopHeading} isMarkdownPage={isMarkdownPage} />
