fix: Aboutページのアカウントリンクにtitleを追加(#73)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,10 +12,14 @@ import '@/styles/markdown.scss';
       <h3 class="text-xl">よし（h-yoshikawa44）</h3>
       <div class="flex items-center space-x-4">
         <a href={ACCOUNT_LINKS.github}
-          ><span class="i-logos:github-icon block text-2xl"></span></a
+          ><span
+            title="GitHub - @h-yoshikawa44"
+            class="i-logos:github-icon block text-2xl"></span></a
         >
         <a href={ACCOUNT_LINKS.twitter}
-          ><span class="i-logos:twitter block text-2xl"></span></a
+          ><span
+            title="Twitter - @yoshi44_lion"
+            class="i-logos:twitter block text-2xl"></span></a
         >
       </div>
       <p>
