--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -34,7 +34,7 @@ const { Content, headings } = await post.render();
         {
           updatedDate && pubDate.toString() !== updatedDate.toString() && (
             <span class="inline-flex items-center">
-              (<span class="i-system-uicons:refresh mr-1">更新日</span>
+              (<span title="更新日" class="i-system-uicons:refresh mr-1" />
               <FormattedDate date={updatedDate} />)
             </span>
           )
@@ -42,11 +42,13 @@ const { Content, headings } = await post.render();
       </p>
       <h1 class="text-4xl font-600 leading-12">{title}</h1>
       <p class="mt-4 flex items-center">
-        <span class="i-system-uicons:document mr-0.5 text-lg">カテゴリー</span>
+        <span title="カテゴリー" class="i-system-uicons:document mr-0.5 text-lg"
+        ></span>
         {`${CATEGORY_MAP[category]}`}
       </p>
       <p class="flex items-center">
-        <span class="i-system-uicons:tags mr-0.5 text-lg">タグ一覧</span>
+        <span title="タグ一覧" class="i-system-uicons:tags mr-0.5 text-lg"
+        ></span>
         {tags.join(', ')}
       </p>
     </header>
