fix: OGコンポーネントのタイトル部分はb要素にした(#73)
iframeにしていない関係で、見出し要素を使うと、全体の見出し構成がおかしくなってしまうので。

--- a/src/components/OG.astro
+++ b/src/components/OG.astro
@@ -87,9 +87,9 @@ if (ogp[url]) {
   >
     <div class="w-full flex items-center justify-between space-x-4">
       <div class="flex flex-1 flex-col">
-        <h2 class="line-clamp-1 overflow-hidden text-sm sm:line-clamp-2">
+        <b class="line-clamp-1 overflow-hidden text-sm sm:line-clamp-2">
           {title}
-        </h2>
+        </b>
         {
           description && (
             <p class="line-clamp-1 mt-1 text-xs sm:line-clamp-2">
