--- a/src/components/GA.astro
+++ b/src/components/GA.astro
@@ -1,5 +1,5 @@
 ---
-const GOOGLE_ANALYTICS_TAG = import.meta.env.GOOGLE_ANALYTICS_TAG;
+const GOOGLE_ANALYTICS_TAG = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG;
 ---
 
 <!-- Google tag (gtag.js) -->
@@ -15,5 +15,7 @@ const GOOGLE_ANALYTICS_TAG = import.meta.env.GOOGLE_ANALYTICS_TAG;
   }
   gtag('js', new Date());
 
-  gtag('config', import.meta.env.GOOGLE_ANALYTICS_TAG, { anonymize_ip: true });
+  gtag('config', import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG, {
+    anonymize_ip: true,
+  });
 </script>
