fix: Adsense広告スクリプトはpartytownを使わないようにした(#81)

--- a/src/components/GAdUnit.astro
+++ b/src/components/GAdUnit.astro
@@ -11,7 +11,7 @@ const GOOGLE_ADSENSE_SLOT = import.meta.env.GOOGLE_ADSENSE_SLOT;
   data-ad-slot=`${GOOGLE_ADSENSE_SLOT}`
   data-ad-format="rectangle, horizontal"
   data-full-width-responsive="false"></ins>
-<script type="text/partytown">
+<script type="text/javascript">
   // eslint-disable-next-line no-undef
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
