feat: Google Adsense向け要素を遅延読み込みするよう組み込み(#83)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,8 +4,7 @@ import '@unocss/reset/tailwind.css';
 import 'wicg-inert';
 import BaseHead from '@/components/BaseHead.astro';
 import GA from '@/components/GA.astro';
-import GAd from '@/components/GAd.astro';
-import GAdUnit from '@/components/GAdUnit.astro';
+import GAdUnitBase from '@/components/GAdUnitBase.astro';
 import Header from '@/components/Header.astro';
 import SideBar from '@/components/SideBar.astro';
 import Footer from '@/components/Footer.astro';
@@ -53,9 +52,9 @@ const isShowGAdUnit = import.meta.env.PROD && isAdsense;
             <div
               class="max-w-full flex-grow-1 overflow-hidden rounded-2 bg-white px-4 py-6 lg:ml-6 sm:px-6"
             >
-              {isShowGAdUnit && <GAdUnit />}
+              {isShowGAdUnit && <GAdUnitBase />}
               <slot />
-              {isShowGAdUnit && <GAdUnit />}
+              {isShowGAdUnit && <GAdUnitBase />}
             </div>
           </div>
         </div>
@@ -70,8 +69,8 @@ const isShowGAdUnit = import.meta.env.PROD && isAdsense;
     </Menu>
     <script>
       import '@/scripts/menu';
+      import '@/scripts/adsense';
     </script>
     {import.meta.env.PROD && <GA />}
-    {import.meta.env.PROD && <GAd />}
   </body>
 </html>
