fix: アンカーリンクメニューでリンク押下時にメニューが閉じるようにした(#85)

--- a/src/components/AnchorLinkListItem.astro
+++ b/src/components/AnchorLinkListItem.astro
@@ -9,7 +9,7 @@ const { href } = Astro.props;
 <li>
   <a
     href={href}
-    class="block w-full px-4 py-0.5 text-sm focus:bg-slate-2 hover:bg-slate-2"
+    class="anchor-link-list-item block w-full px-4 py-0.5 text-sm focus:bg-slate-2 hover:bg-slate-2"
     ><slot /></a
   >
 </li>
