fix: モバイルサイズのページ内リンクによるスクロール位置をヘッダー分調整した(#85)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,11 @@
   font-display: swap;
 }
 
+// モバイルサイズでのアンカーリンクメニューから飛んだ際に、ヘッダー分の高さをずらす
+html {
+  @apply scroll-pt-14 md:scroll-p-inherit;
+}
+
 button,
 a {
   @apply transition;
