fix: ヘッダーのタイトルがa要素だけの時もblockにした(#85)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const { noTopHeading = false, isMarkdownPage = false } = Astro.props;
       {
         noTopHeading ? (
           <div>
-            <a href="/" class="text-2xl font-fatface">
+            <a href="/" class="block text-2xl font-fatface">
               {SITE_TITLE}
             </a>
           </div>
