--- a/src/components/GAd.astro
+++ b/src/components/GAd.astro
@@ -1,5 +1,6 @@
 ---
-const GOOGLE_ADSENSE_PUBLISHER_ID = import.meta.env.GOOGLE_ADSENSE_PUBLISHER_ID;
+const GOOGLE_ADSENSE_PUBLISHER_ID = import.meta.env
+  .PUBLIC_GOOGLE_ADSENSE_PUBLISHER_ID;
 ---
 
 <!-- Google Adsense -->
