--- a/src/components/GAdUnit.astro
+++ b/src/components/GAdUnit.astro
@@ -1,6 +1,7 @@
 ---
-const GOOGLE_ADSENSE_PUBLISHER_ID = import.meta.env.GOOGLE_ADSENSE_PUBLISHER_ID;
-const GOOGLE_ADSENSE_SLOT = import.meta.env.GOOGLE_ADSENSE_SLOT;
+const GOOGLE_ADSENSE_PUBLISHER_ID = import.meta.env
+  .PUBLIC_GOOGLE_ADSENSE_PUBLISHER_ID;
+const GOOGLE_ADSENSE_SLOT = import.meta.env.PUBLIC_GOOGLE_ADSENSE_SLOT;
 ---
 
 <!-- レスポンシブ広告 -->
