--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ const { noTopHeading = false, isMarkdownPage = false } = Astro.props;
 >
   <div class="mx-auto px-4 color-white container">
     <div class="flex items-baseline">
+      <!-- モバイル端末でテキストが改行されることがあったので min-width を指定 -->
       <div class="min-w-[172px]">
         {
           noTopHeading ? (
