fix: Astro 3系に伴い、getStaticPathsの返り値に明示的にflatMapとするようにした(#96)
https://docs.astro.build/ja/guides/upgrade-to/v3/#removed-automatic-flattening-of-getstaticpathss-return-value

--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -20,7 +20,7 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
       return { ...post, slug: extractPostSlug(post.slug) };
     });
 
-  return CATEGORY_LIST.map((category) => {
+  return CATEGORY_LIST.flatMap((category) => {
     const filteredPosts = allPosts.filter(
       (post) => post.data.category === category
     );
