--- a/src/pages/tags/[tag]/[page].astro
+++ b/src/pages/tags/[tag]/[page].astro
@@ -23,7 +23,7 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
     ...new Set(allPosts.map((post) => post.data.tags).flat()),
   ];
 
-  return uniqueTags.map((tag) => {
+  return uniqueTags.flatMap((tag) => {
     const filteredPosts = allPosts.filter((post) =>
       post.data.tags.includes(tag)
     );
