--- a/src/components/AnchorLinkList.astro
+++ b/src/components/AnchorLinkList.astro
@@ -1,5 +1,5 @@
 ---
-import { MarkdownHeading } from 'astro';
+import type { MarkdownHeading } from 'astro';
 import AnchorLinkListItem from '@/components/AnchorLinkListItem.astro';
 
 type Props = {
