--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -1,5 +1,5 @@
 ---
-import { MarkdownHeading } from 'astro';
+import type { MarkdownHeading } from 'astro';
 import NavLinkList from '@/components/NavLinkList.astro';
 import AnchorLinkList from '@/components/AnchorLinkList.astro';
 
