--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { MarkdownHeading } from 'astro';
+import type { MarkdownHeading } from 'astro';
 import '@unocss/reset/tailwind.css';
 import 'wicg-inert';
 import BaseHead from '@/components/BaseHead.astro';
