feat: Twitterカードの形式をsummaryに移行(#116)
Twitterカードの仕様変更により、summary_large_imageだと
タイトルと説明が表示されない状態になってしまったため。

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -43,7 +43,7 @@ const GOOGLE_SITE_VERIFICATION = import.meta.env.GOOGLE_SITE_VERIFICATION;
 <meta property="og:image" content="/ogp.png" />
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:card" content="summary" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={simpleTitle} />
 <meta property="twitter:description" content={description} />
