update: Prettierのアプデ + 設定更新 + fix(#134)
- Prettier: 2.8.8 -> 3.1.0
- prettier-plugin-astro: 0.8.1 -> 0.12.2

--- a/src/components/AnchorLinkList.astro
+++ b/src/components/AnchorLinkList.astro
@@ -13,7 +13,7 @@ const { markdownHeadings } = Astro.props;
   {
     markdownHeadings.map((heading) => (
       <AnchorLinkListItem href={`#${heading.slug}`}>{`${'#'.repeat(
-        heading.depth
+        heading.depth,
       )} ${heading.text}`}</AnchorLinkListItem>
     ))
   }
