--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const isMarkdownPage = markdownHeadings?.length !== 0;
 const isShowGAdUnit = import.meta.env.PROD && isAdsense;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <BaseHead title={title} description={description} />
