--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import '@/styles/markdown.scss';
       </div>
       <p>
         Web Developer。<br />
-        ここ数年はフロントエンドメインで活動しています。 <br
+         ここ数年はフロントエンドメインで活動しています。 <br
         />経歴や経験技術、資格などは<a
           href={ACCOUNT_LINKS.portfolio}
           class="underline underline-offset-2 decoration-solid"
@@ -44,7 +44,8 @@ import '@/styles/markdown.scss';
           元々はバックエンド寄りの技術スタックでしたが、React の宣言的 UI
           に触れてからフロントエンドに関心を持つようになって、フロントエンドに転向したようなやつです。<br
           />
-          主に関心があるのは TypeScript / React / Next.js 周辺。最近は Astro とかも。
+           主に関心があるのは TypeScript / React / Next.js 周辺。最近は Astro
+          とかも。
         </p>
       </div>
     </div>
@@ -54,13 +55,13 @@ import '@/styles/markdown.scss';
         <p>
           主に自分の関心があることについて、自分の頭の情報整理も兼ねて記事を書いています。<br
           />
-          なので、React / Next.js 周りが割と多い傾向ですね。<br />
-          誰かの役に立てばいいなと思いつつ、起点は自分のために書いているので、マイペースに投稿中（1年で12記事程度）
+           なので、React / Next.js 周りが割と多い傾向ですね。<br />
+           誰かの役に立てばいいなと思いつつ、起点は自分のために書いているので、マイペースに投稿中（1年で12記事程度）
         </p>
         <p>
           技術記事の他に、技術関連ツール・サービスや資格試験レポート。技術イベントの資料リンク集、たまに雑談ネタなども投稿しています。<br
           />
-          それと自分が精神疾患と付き合いながら生きているので、体調のことも書くことがあります（ここは好みが分かれるかも）
+           それと自分が精神疾患と付き合いながら生きているので、体調のことも書くことがあります（ここは好みが分かれるかも）
         </p>
         <p>
           全記事の RSS に加え、記事カテゴリごとの RSS
