fix: ビルド時だけAstro.request.urlに.htmlがついてしまうので、除去するようにした(#136)
こうしないと、キャッシュキーがヒットせずで意味がなくなってしまうので。

--- a/src/components/OG.astro
+++ b/src/components/OG.astro
@@ -25,7 +25,8 @@ const postYearFound = Astro.request.url.match(/posts\/(\d{4})/);
 if (postYearFound === null)
   throw Error('記事URLから年度が抽出できませんでした。');
 
-const fileName = fileNameFoumd[1];
+// ビルド時だけ .html がついてしまうのでなくす
+const fileName = fileNameFoumd[1].replace('.html', '');
 const postYear = postYearFound[1];
 const { url } = Astro.props;
 const generatedFilePath = new URL(
