feat: ページ下部の広告上余白を調整(#146)

--- a/src/features/post/PostPagingList.astro
+++ b/src/features/post/PostPagingList.astro
@@ -52,7 +52,7 @@ const {
       ))
     }
   </div>
-  <div class="my-4">
+  <div class="mt-4">
     <Paging previousUrl={previousUrl} nextUrl={nextUrl} />
   </div>
 </BaseLayout>
