update: ESLintのアプデ + fix(#148)
- ESLint: 8.54.0 -> 8.56.0
- eslint-plugin-astro: 0.29.1 -> 0.31.4
- @typescript-eslint/eslint-plugin: 6.11.0 -> 6.21.0
- @typescript-eslint/parser: 6.11.0 -> 6.21.0

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -38,7 +38,7 @@ const isShowGAdUnit = import.meta.env.PROD && isAdsense;
   </head>
 
   <body
-    class="break-words bg-slate-100 text-left leading-6 font-sawarabi text-slate-800"
+    class="break-words bg-slate-100 text-left text-slate-800 leading-6 font-sawarabi"
   >
     <div id="base-contents">
       <Header noTopHeading={noTopHeading} isMarkdownPage={isMarkdownPage} />
