--- a/src/components/GA.astro
+++ b/src/components/GA.astro
@@ -1,5 +1,5 @@
 ---
-const GOOGLE_ANALYTICS_TAG = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG;
+const GOOGLE_ANALYTICS_TAG = import.meta.env.GOOGLE_ANALYTICS_TAG;
 ---
 
 <!-- Google tag (gtag.js) -->
@@ -7,7 +7,7 @@ const GOOGLE_ANALYTICS_TAG = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG;
   type="text/partytown"
   src=`https://www.googletagmanager.com/gtag/js?id=${GOOGLE_ANALYTICS_TAG}`
 ></script>
-<script type="text/partytown">
+<script type="text/partytown" define:vars={{ GOOGLE_ANALYTICS_TAG }}>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
     // eslint-disable-next-line no-undef
@@ -15,7 +15,7 @@ const GOOGLE_ANALYTICS_TAG = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG;
   }
   gtag('js', new Date());
 
-  gtag('config', import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG, {
+  gtag('config', GOOGLE_ANALYTICS_TAG, {
     anonymize_ip: true,
   });
 </script>
