--- a/src/components/ImageWrapper.astro
+++ b/src/components/ImageWrapper.astro
@@ -3,9 +3,12 @@ import type { ImageMetadata } from 'astro';
 import { Image } from 'astro:assets';
 import type { ComponentProps } from 'astro/types';
 
-type Props = ComponentProps<typeof Image>;
+// class のままだとコンポーネント呼出し側で型エラーになってしまうので className で受け取るようにする
+type Props = Omit<ComponentProps<typeof Image>, 'class'> & {
+  className?: string | null | undefined;
+};
 
-const { src, ...props } = Astro.props;
+const { src, className, ...props } = Astro.props;
 
 const isLocalImg = typeof src === 'string' && !src.startsWith('http');
 const localImages = import.meta.glob<{ default: ImageMetadata }>(
@@ -28,4 +31,4 @@ const optimalSrc = (() => {
 {
   /* ComponentProps を使っているのに、どうしても型が合わないと言われるので苦肉の any */
 }
-<Image {...props as any} src={optimalSrc} />
+<Image {...props as any} class={className} src={optimalSrc} />
