feat: Twitter -> X アイコンへ移行(#175)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,10 +21,10 @@ import '@/styles/markdown.scss';
             title="GitHub - @h-yoshikawa44"
             class="i-logos:github-icon block text-2xl"></span></a
         >
-        <a href={ACCOUNT_LINKS.twitter}
+        <a href={ACCOUNT_LINKS.x}
           ><span
-            title="Twitter - @yoshi44_lion"
-            class="i-logos:twitter block text-2xl"></span></a
+            title="X - @yoshi44_lion"
+            class="i-ri:twitter-x-line block text-2xl"></span></a
         >
       </div>
       <p>
