feat: 環境変数はastro:env経由で使用するようにした(#183)
Astro v4.10.0の実験的機能

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,5 @@
 ---
+import { GOOGLE_SITE_VERIFICATION } from 'astro:env/server';
 import { SITE_TITLE, SITE_DESCRIPTION } from '@/consts';
 
 export interface Props {
@@ -17,8 +18,6 @@ const titleWithSiteTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 const simpleTitle = title ? title : SITE_TITLE;
 
 const ogpImage = new URL('/ogp.png', Astro.site?.origin!);
-
-const GOOGLE_SITE_VERIFICATION = import.meta.env.GOOGLE_SITE_VERIFICATION;
 ---
 
 <!-- Global Metadata -->
