--- a/src/components/GA.astro
+++ b/src/components/GA.astro
@@ -1,5 +1,5 @@
 ---
-const GOOGLE_ANALYTICS_TAG = import.meta.env.GOOGLE_ANALYTICS_TAG;
+import { GOOGLE_ANALYTICS_TAG } from 'astro:env/server';
 ---
 
 <!-- Google tag (gtag.js) -->
