fix: タグ一覧の各種アイコンサイズが変わっていたので明示的に20×20指定するようにした(#183)

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -37,7 +37,7 @@ const tagInfoList = Object.entries(tagsInfo)
           href={`/tags/${tagInfo.tagName}/1`}
           class="m-0.5 inline-flex items-center border rounded-4 px-2 py-1 hover:bg-slate-100"
         >
-          <span class={`${tagInfo.iconClass} text-xl mr-1`} />
+          <span class={`${tagInfo.iconClass} w-5 h-5 mr-1`} />
           {`${tagInfo.tagName}(${tagInfo.count})`}
         </a>
       ))
