update: ESLintのアプデ + flat config ベースに移行(#183)
- ESLint: 8.57.0 -> 9.10.0
- eslint-plugin-astro: 0.32.0 -> 1.2.3
- eslint-plugin-jsx-a11y: 6.8.0 -> 6.10.0
- @typescript-eslint/parser: 7.3.1 -> 8.4.0
in: typescript-eslint
out: @typescript-eslint/eslint-plugin

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,7 +17,7 @@ const { title, description = SITE_DESCRIPTION } = Astro.props;
 const titleWithSiteTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 const simpleTitle = title ? title : SITE_TITLE;
 
-const ogpImage = new URL('/ogp.png', Astro.site?.origin!);
+const ogpImage = new URL('/ogp.png', Astro.site?.origin);
 ---
 
 <!-- Global Metadata -->
