--- a/src/pages/form.astro
+++ b/src/pages/form.astro
@@ -6,6 +6,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
   <iframe
     src="https://docs.google.com/forms/d/e/1FAIpQLSelbLcrB0oWhQyA5om5hQqyfG1128J-bDaqV_d6nf6m3kYDNQ/viewform?embedded=true"
     width="100%"
-    height="1200">読み込んでいます…</iframe
+    height="1200"
+    title="お問い合わせフォーム">読み込んでいます…</iframe
   >
 </PageLayout>
