--- a/src/components/GA.astro
+++ b/src/components/GA.astro
@@ -11,7 +11,7 @@ import { GOOGLE_ANALYTICS_TAG } from 'astro:env/server';
 <script type="text/partytown" is:inline define:vars={{ GOOGLE_ANALYTICS_TAG }}>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
-    // eslint-disable-next-line no-undef
+    // eslint-disable-next-line prefer-rest-params
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
