--- a/src/components/ImageWrapper.astro
+++ b/src/components/ImageWrapper.astro
@@ -26,15 +26,16 @@ const optimalSrc = (() => {
   }
   return localImages[localImagePath]();
 })();
+
+// ComponentProps を使っているのに、どうしても型が合わないと言われるので苦肉の any
+// eslint-disable-next-line @typescript-eslint/no-explicit-any
+const anyProps = props as any;
 ---
 
-{
-  /* ComponentProps を使っているのに、どうしても型が合わないと言われるので苦肉の any
-   * OGP 画像が見つけられないときは非表示になるようにする
-   */
-}
+{/** OGP 画像が見つけられないときは非表示になるようにする */}
+
 <Image
-  {...props as any}
+  {...anyProps}
   class={className}
   src={optimalSrc}
   onerror={`this.onerror=null; this.style.display='none'`}
